--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,6 +10,7 @@
     -->
     <ion-menu-button color="primary" menu="first"></ion-menu-button>
     </ion-buttons>
+    <ion-img src="./assets/letras.png" style="width: 200px; display:block; margin:auto;"></ion-img>
   </ion-toolbar>
 </ion-header>
 
