--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -8,7 +8,8 @@
     <ion-list>
       <ion-item (click)="inicio()">Inicio</ion-item>
       <ion-item (click)="colegio()">Colegio</ion-item>
-      <ion-item (click)="salir()">Salir</ion-item>
+      <ion-item >Consejos</ion-item>
+      <ion-item>Tutorial</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
