--- a/src/app/paginas/micolegio/micolegio.page.html
+++ b/src/app/paginas/micolegio/micolegio.page.html
@@ -1,9 +1,20 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>micolegio</ion-title>
+  <ion-toolbar color="secondary">
+    <ion-img src="./assets/letras.png" style="width: 200px; display:block; margin:auto;"></ion-img>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding="true">
+  <div id="container" style="padding: 10px;">
+    <h1 style="color: #2F5C78;">Mi colegio</h1>
+    <br>
+    <ion-button (click)="actividades()"  expand="full" fill="solid" color="primary">ACTIVIDADES
+    </ion-button>
+    <br><br>
+    <ion-button (click)="chat()"  expand="full" fill="solid" color="primary">CHAT
+    </ion-button>
+    </div>
 </ion-content>
