--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,18 +31,18 @@
         <ion-input type="text" placeholder="Description" [(ngModel)] = "event.desc"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Start</ion-label>
+        <ion-label>Inicio</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)] = "event.startTime" [min] = "minDate"></ion-datetime>
       </ion-item>
       <ion-item>
-        <ion-label>End</ion-label>
+        <ion-label>Fin</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)] = "event.endTime" [min] = "minDate"></ion-datetime>
       </ion-item>
       <ion-item>
-        <ion-label>All Day?</ion-label>
+        <ion-label>Todo el día?</ion-label>
         <ion-checkbox [(ngModel)] = "event.allDay"></ion-checkbox>
       </ion-item>
-      <ion-button fill = "outline" expand="block" (click) ="addEvent()" [disabled] = "event.title == ''">Add Event</ion-button>
+      <ion-button fill = "outline" expand="block" (click) ="addEvent()" [disabled] = "event.title == ''">Agregar evento</ion-button>
     </ion-card-content>
   </ion-card>
 <!--
