--- a/src/app/paginas/chat/chat.page.html
+++ b/src/app/paginas/chat/chat.page.html
@@ -7,29 +7,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content style="background-color: #FFE8C7;">
 <div class="container">
   <img src="./assets/perfil.png" alt="Avatar" style="width:100%;">
-  <p>Hello. How are you today?</p>
+  <p>Hello.</p>
   <span class="time-right">11:00</span>
 </div>
 
 <div class="container darker">
   <img src="./assets/perfil.png" alt="Avatar" class="right" style="width:100%;">
-  <p>Hey! I'm fine. Thanks for asking!</p>
+  <p>Hey! I need your help!</p>
   <span class="time-left">11:01</span>
-</div>
-
-<div class="container">
-  <img src="./assets/perfil.png" alt="Avatar" style="width:100%;">
-  <p>Sweet! So, what do you wanna do today?</p>
-  <span class="time-right">11:02</span>
-</div>
-
-<div class="container darker">
-  <img src="./assets/perfil.png" alt="Avatar" class="right" style="width:100%;">
-  <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
-  <span class="time-left">11:05</span>
 </div>
 
 <div style="position: absolute; bottom: 0; width: 100%;">
