--- a/src/app/paginas/login/login.page.html
+++ b/src/app/paginas/login/login.page.html
@@ -16,7 +16,7 @@
       </ion-item>
       <ion-item>
         <ion-label style="color: #2F5C78;">Contraseña: </ion-label>
-        <ion-input type="text" name="nombre"></ion-input>
+        <ion-input type="password" name="nombre"></ion-input>
       </ion-item>
       
     <ion-button (click)="login()" expand="full" fill="solid" color="primary">Acceder</ion-button>
